--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "Lao Mo",
     "email": "nolebase@ayaka.moe",
-    "url": "https://github.com/nolebase"
+    "url": "https://github.com/naixyc"
   },
   "license": "MIT",
   "keywords": [
