--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "headlessui",
     "iconify",
     "mathjax",
-    "nolebase",
+    "naixyc",
     "unlazy",
     "vitepress",
     "vuedraggable"
