--- a/.github/workflows/production-deployment.yaml
+++ b/.github/workflows/production-deployment.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: 正式 Production
-      url: https://nolebase.ayaka.io
+      url: https://blog.naixyc.top
     steps:
       - name: 签出代码
         uses: actions/checkout@v3
